--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
 <body>
     <section class="popular" id="popular">
 
-        <h1 class="heading">Our Products</h1>
+        <h1 class="heading">Our Products and Services</h1>
     
         <div class="box-container">
     
