--- a/homepage.html
+++ b/homepage.html
@@ -42,7 +42,8 @@
   -->
   <link rel="preload" as="image" href="./assets/images/hero-banner.png">
   <link rel="preload" as="image" href="./assets/images/hero-bg.jpg">
-  <script type = "module" src = "./login.js"></script>
+  <!-- <script type = "module" src = "./login.js"></script> -->
+  
 
 </head>
 
@@ -75,18 +76,18 @@
           </li>
 
           <li>
-            <a href="#projects" class="navbar-link">Projects</a>
+            <a href="./services.html" class="navbar-link">Products</a>
           </li>
 
           <li>
-            <a href="./Forms.html" class="navbar-link">Contact</a>
+            <a href="#contact" class="navbar-link">Contact</a>
           </li>
 
         </ul>
       </nav>
 
-      <a href="./Login.html" class="btn btn-primary">
-        <span class="span">LOGIN</span>
+      <a href="./login.html" class="btn btn-primary">
+        <span class="span">ORDER NOW</span>
 
         <span class="material-symbols-rounded">arrow_forward</span>
       </a>
@@ -108,7 +109,7 @@
         - #HERO
       -->
 
-      <section id="home" class="hero has-bg-image" aria-label="home" style="background-image: url('./assets/images/spareparts9.jpg')">
+      <section id="home" class="hero has-bg-image" aria-label="home" style="background-image: url('./assets/images/background\ image\ 3.webp')">
         <div class="container">
 
           <div class="hero-content">
@@ -121,7 +122,7 @@
               We strive to provide the best possible care for your vehicle through our team of experienced mechanics and technicians who are trained to handle a wide variety of car models and can help diagnose and fix any issues your car may be experiencing
             </p>
 
-            <a href="#" class="btn">
+            <a href="./services.html" class="btn">
               <span class="span">Our Services</span> </a>
 
           </div>
@@ -163,7 +164,7 @@
                   We use the latest diagnostic tools and techniques to identify and resolve any engine issues your vehicle may have. 
                 </p>
 
-                <a href="#" class="btn-link">Read more</a>
+                <!-- <a href="#" class="btn-link">Read more</a> -->
               </div>
               
             </li>
@@ -181,7 +182,7 @@
                   Our brake repair services cover a wide range of repairs, from minor adjustments such as brake pad replacements, to major overhauls such as brake line repairs.
                 </p>
 
-                <a href="#" class="btn-link">Read more</a>
+                <!-- <a href="#" class="btn-link">Read more</a> -->
 
               </div>
             </li>
@@ -199,7 +200,7 @@
                   Our tire repair services cover a wide range of repairs, from minor fixes such as patching a punctured tire, to major repairs such as replacing a damaged tire
                 </p>
 
-                <a href="#" class="btn-link">Read more</a>
+                <!-- <a href="#" class="btn-link">Read more</a> -->
 
               </div>
             </li>
@@ -218,7 +219,7 @@
                   At our battery repair service, we believe in using only high-quality batteries and equipment to ensure that your vehicle is restored to the highest standards
                 </p>
 
-                <a href="#" class="btn-link">Read more</a>
+                <!-- <a href="#" class="btn-link">Read more</a> -->
 
               </div>
             </li>
@@ -242,14 +243,14 @@
                   We will work with you to provide the most cost-effective and efficient solutions to get your steering wheel functioning safely and smoothly again
                 </p>
 
-                <a href="#" class="btn-link">Read more</a>
+                <!-- <a href="#" class="btn-link">Read more</a> -->
 
               </div>
             </li>
 
           </ul>
 
-          <a href="#" class="btn">
+          <a href="./services.html" class="btn">
             <span class="span">View All Services</span>
           </a>
 
@@ -434,19 +435,19 @@
           <ul class="social-list">
 
             <li>
-              <a href="#" class="social-link">
+              <a href="https://www.facebook.com/" class="social-link">
                 <img src="./assets/images/facebook.svg" alt="facebook">
               </a>
             </li>
 
             <li>
-              <a href="#" class="social-link">
+              <a href="https://www.instagram.com/" class="social-link">
                 <img src="./assets/images/instagram.svg" alt="instagram">
               </a>
             </li>
 
             <li>
-              <a href="#" class="social-link">
+              <a href="https://www.twitter.com/" class="social-link">
                 <img src="./assets/images/twitter.svg" alt="twitter">
               </a>
             </li>
@@ -534,12 +535,7 @@
 
 
 
-
-
-  <!-- 
-    - custom js link
-  
-  <script src="../autofix-master/assets/js/script.js"></script>-->
+  <script src="./homepage.js"></script>
 
 </body>
 
