--- a/homepage.html
+++ b/homepage.html
@@ -123,7 +123,7 @@
             </p>
 
             <a href="./services.html" class="btn">
-              <span class="span">Our Services</span> </a>
+              <span class="span">Checkout our offers</span> </a>
 
           </div>
 
@@ -285,9 +285,9 @@
 
             <p class="section-text">
               We are proud of our reputation for exceptional customer service and strive to build long-lasting relationships with all of our clients. Our mission is to provide our customers with the best possible experience, whether they are shopping for a single part or placing a large order.
-              Thank you for choosing ABC Spare Parts as your trusted supplier. We look forward to serving you and exceeding your expectations.
+              Thank you for choosing Ufanisi Autofix as your trusted spare parts supplier. We look forward to serving you and exceeding your expectations.
             </p>
-
+<!-- 
             <ul class="about-list">
 
               <li class="about-item">
@@ -314,7 +314,7 @@
                 </p>
               </li>
 
-            </ul>
+            </ul> -->
 
           </div>
 
@@ -328,8 +328,8 @@
       <!-- 
         - #WORK
       -->
-
-      <section id="projects" class="section work" aria-labelledby="work-label">
+      
+      <!-- <section id="projects" class="section work" aria-labelledby="work-label">
         <div class="container">
 
           <p class="section-subtitle :light" id="work-label">Our Work</p>
@@ -404,14 +404,15 @@
           </ul>
 
         </div>
-      </section>
+      </section> -->
+
 
     </article>
   </main>
 
 
 
-
+<hr>
 
   <!-- 
     - #FOOTER
@@ -520,7 +521,7 @@
     <div class="footer-bottom">
       <div class="container">
 
-        <p class="copyright">Copyright 2023,UfanisiSpareParts All Rights Reserved.</p>
+        <p class="copyright">Copyright 2023   UfanisiAutofix All Rights Reserved.</p>
 
         <img src="./assets/images/footer-shape-2.png" width="778" height="335" loading="lazy" alt="Shape"
           class="shape shape-2">
