social links changes

--- a/index.html
+++ b/index.html
@@ -436,19 +436,19 @@
           <ul class="social-list">
 
             <li>
-              <a href="https://www.facebook.com/" class="social-link">
+              <a href="https://www.facebook.com/profile.php?id=100091951440251" class="social-link">
                 <img src="./assets/images/facebook.svg" alt="facebook">
               </a>
             </li>
 
             <li>
-              <a href="https://www.instagram.com/" class="social-link">
+              <a href="https://www.instagram.com/ufanisiautoparts/" class="social-link">
                 <img src="./assets/images/instagram.svg" alt="instagram">
               </a>
             </li>
 
             <li>
-              <a href="https://www.twitter.com/" class="social-link">
+              <a href="https://www.twitter.com/UfanisiAutofix/" class="social-link">
                 <img src="./assets/images/twitter.svg" alt="twitter">
               </a>
             </li>
