--- a/forms.html
+++ b/forms.html
@@ -180,6 +180,11 @@
         <input type="text" id="address">
 
         <button id="submitButton">PLACE ORDER</button>
+        <br>
+        <br>
+        <button> 
+          <a href="https://flutterwave.com/pay/p8ebpbyo3lqg" style="text-decoration: none; color: white;">MAKE YOUR PAYMENT</a>
+        </button>
       
     </div>
     
